# rego-policy

./: .env.example  .gitignore  README.md  app.py  data-extract.ipynb  policy_generator.py  pyproject.toml  requirements.txt
data/: policy_0.rego  policy_1.rego  policy_10.rego  policy_11.rego  policy_12.rego  policy_13.rego  policy_14.rego  policy_15.rego  policy_16.rego  policy_17.rego  policy_18.rego  policy_19.rego  policy_2.rego  policy_20.rego  policy_21.rego  policy_22.rego  policy_23.rego  policy_24.rego  policy_25.rego  policy_26.rego  policy_27.rego  policy_28.rego  policy_29.rego  policy_3.rego  policy_30.rego  policy_31.rego  policy_32.rego  policy_33.rego  policy_34.rego  policy_35.rego  policy_36.rego  policy_37.rego  policy_38.rego  policy_39.rego  policy_4.rego  policy_40.rego  policy_41.rego  policy_42.rego  policy_43.rego  policy_44.rego  (+13 more)
requirements/: policy_0_requirements.txt  policy_10_requirements.txt  policy_11_requirements.txt  policy_12_requirements.txt  policy_13_requirements.txt  policy_14_requirements.txt  policy_15_requirements.txt  policy_16_requirements.txt  policy_17_requirements.txt  policy_18_requirements.txt  policy_19_requirements.txt  policy_1_requirements.txt  policy_20_requirements.txt  policy_21_requirements.txt  policy_22_requirements.txt  policy_23_requirements.txt  policy_24_requirements.txt  policy_25_requirements.txt  policy_26_requirements.txt  policy_27_requirements.txt  policy_28_requirements.txt  policy_29_requirements.txt  policy_2_requirements.txt  policy_30_requirements.txt  policy_31_requirements.txt  (+28 more)
scripts/: run.sh  (+1 more)
(+165 files in other folders)
